tests/testcase/errors/parse_error_missing_var_name.ob
fun main() do
  let = 5;
end